<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.eggdigital.rateus.MainActivity">
    <EditText
            android:id="@+id/edittext_criteria_days"
            android:hint="@string/rateus_criteria_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    <EditText
            android:id="@+id/edittext_retry_days"
            android:hint="@string/rateus_criteria_day_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_us_retry"
        />
    <ToggleButton
        android:id="@+id/toggle_retry"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"

        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_us_debug"
            />
        <ToggleButton
            android:id="@+id/toggle_debug"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            />
    </LinearLayout>
    <Button
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:id="@+id/button_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rateus_button_title" />
    <Button
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:id="@+id/button_spam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rateus_button_spam" />
</LinearLayout>
